update the code and add a readme file

--- a/Rooted_subtree_with_capacity_constraints.ipynb
+++ b/Rooted_subtree_with_capacity_constraints.ipynb
@@ -21,14 +21,14 @@
     "\n",
     "## Données\n",
     "\n",
-    "Vous trouverez dans le répertoire `instances` un ensemble de jeux de données pour ce problème. Chaque fichier correspond à un jeu de données et contient les informations suivantes (la numérotation des sites commence à 0) :\n",
+    "Le répertoire `instances` est un ensemble de jeux de données pour ce problème. Chaque fichier correspond à un jeu de données et contient les informations suivantes (la numérotation des sites commence à 0) :\n",
     "\n",
     "- Première ligne : Nombre de sites, $C^1$, $C^2$, numéro du centre.\n",
     "- Une ligne pour chaque site indiquant : numéro du prédécesseur $\\pi_i$, distance $d_i$ du site au centre, le profit $p_i$ du site, le poids $w_i^1$, le poids $w_i^2$.\n",
     "\n",
     "Si pour un site $i$, son prédécesseur vaut $\\pi_i = -1$, soit $i$ est le centre $r$ et il doit être pris dans la solution, soit le site $i$ n'est pas le centre et auquel cas, le site ne peut pas être pris dans la solution.\n",
     "\n",
-    "Implémentez ici la lecture des données."
+    "Implémentons ici la lecture des données :"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "## Premier modèle\n",
     "\n",
-    "Considérez les variables :\n",
+    "Considérons les variables :\n",
     "\n",
     "- $x_i = \\left\\{ \\begin{array}{l}\n",
     "1 \\text{ si le site } i \\in V \\text{ est sélectionné,}\\\\\n",
@@ -69,7 +69,7 @@
     "\\end{array}\\right.$\n",
     "- $R \\in \\mathbb{R} $ la valeur du rayon (la distance au centre du sommet sélectionné le plus éloigné).\n",
     "\n",
-    "Ecrivez et implémentez ce premier modèle. Vous testerez ce modèle sur les instances fournies."
+    "Implémentons ce premier modèle et testons le sur une instance :"
    ]
   },
   {
@@ -275,7 +275,7 @@
     "Il est possible de modéliser le rayon de manière plus précise. Pour cela, on définit la fonction $\\sigma : V \\mapsto \\{1, \\dots, n\\}$ qui associe à chaque site $i \\in V$ sa position dans l'ordre croissant des distances des sites au centre et $\\sigma^{-1}(k)$ la fonction inverse qui renvoie le site en position $k$ dans cet ordre\\\n",
     "($0 = d_r = d_{\\sigma^{-1}(1)} \\leq d_{\\sigma^{-1}(2)} \\leq \\dots \\leq d_{\\sigma^{-1}(n)}$). Pour tout site $i \\in V \\setminus \\{r\\}$ différent du centre $r$, on pose $\\Delta_i = d_i - d_{\\sigma^{-1}(\\sigma(i)-1)}$ la différence de distance entre le site $i$ et son prédécesseur dans l'ordre défini pas $\\sigma$.\n",
     "\n",
-    "Considérez les variables suivantes\n",
+    "Considérons les variables suivantes :\n",
     "\n",
     "- $x_i = \\left\\{ \\begin{array}{l}\n",
     "1 \\text{ si le site } i \\in V \\text{ est sélectionné,}\\\\\n",
@@ -286,9 +286,9 @@
     "0 \\text{ sinon.}\n",
     "\\end{array}\\right.$\n",
     "\n",
-    "Notez qu'un sommet peut avoir une distance plus petite que le rayon, sans nécessairement être sélectionné dans la solution. En revanche, un sommet sélectionné doit forcement avoir une distance plus petite ou égale au rayon. Notez également que le rayon d'un centre est la somme des $\\Delta_i$ sur tous les sites $i$ ayant une distance plus petite ou égale au rayon.\n",
+    "Notons qu'un sommet peut avoir une distance plus petite que le rayon, sans nécessairement être sélectionné dans la solution. En revanche, un sommet sélectionné doit forcement avoir une distance plus petite ou égale au rayon. Notons également que le rayon d'un centre est la somme des $\\Delta_i$ sur tous les sites $i$ ayant une distance plus petite ou égale au rayon.\n",
     "\n",
-    "Ecrivez et implémentez ce second modèle ci-dessous. Vous testerez ce modèle sur les instances fournies."
+    "Implémentons ce second modèle ci-dessous et testons le sur la même instance :"
    ]
   },
   {
