--- a/bilan.ipynb
+++ b/bilan.ipynb
@@ -80,6 +80,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le premier modèle trouve les solutions optimales sur toutes les instances."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -94,6 +101,13 @@
    ],
    "source": [
     "print(np.allclose(optimal_solutions, solutions_model_2, rtol=1e-03, atol=1e-06, equal_nan=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De même pour le second."
    ]
   },
   {
@@ -148,6 +162,13 @@
     "plt.ylabel('Time (s)')\n",
     "plt.title('Time to solve instances for model 2')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On constate que le premier modèle est bien plus rapide que le second."
    ]
   }
  ],
